refactor: modularización del sistema, corrección de sagas y borrado de fábrica
- Arquitectura: Extracción masiva de lógica desde PrimaryController hacia nuevos servicios dedicados (BusquedaService, GalleryManager, ImportarExportarBD y BusquedaSagas).
- Sagas: Corrección de duplicados mediante normalización (Regex) y persistencia real al borrar/renombrar colecciones. Solucionado fallo de inyección FXML eliminando la "ñ".
- Seguridad y Datos: Implementado "Restaurar a fábrica" destructivo (borrado recursivo de JSONs, imágenes y purga del registro del SO) protegido por palabra de seguridad.
- Validación: Añadido ValidadorISBN (algoritmos Modulo 10 y 11) para evitar errores tipográficos en altas y búsquedas.
- Internacionalización (i18n): Solucionado cuelgue crítico (MissingResourceException) al buscar libros añadiendo la clave 'status.searching' en todos los idiomas.